<resources>
    <string name="app_name">Moscow Wi-Fi autologin</string>
    <string name="report">Send report</string>
    <string name="report_email_address" translatable="false">mosmetro@thedrhax.pw</string>
    <string name="report_email_subject" formatted="false">Version %s</string>
    <string name="report_choose_client">Choose email client or messenger…</string>
    <string name="retry">Try again</string>
    <string name="connect">Connect</string>
    <string name="in_background">In background</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="install">Install</string>
    <string name="download">Download</string>
    <string name="ignore_short">Ignore</string>
    <string name="ignore">Ignore</string>
    <string name="later">Later</string>
    <string name="error" formatted="false">Error: %s</string>
    <string name="not">not</string>
    <string name="try_out_of" formatted="false">try %d out of %d</string>
    <string name="version" formatted="false">Version: %s</string>
    <string name="show_debug_log">Show verbose messages</string>
    <string name="clipboard_copy">Text copied to clipboard</string>
    <string name="screen_clear">Clear screen</string>
    <string name="warning">Warning</string>
    <string name="about">About</string>
    <string name="log">Log</string>
    <string name="form_login">Login:</string>
    <string name="form_password">Password:</string>
    <string name="pref_category_main">Main preferences</string>
    <string name="pref_category_connection">Connection preferences</string>
    <string name="pref_category_connection_summary">Automatic background connection preferences</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_notifications_summary">Enable/disable various notifications</string>
    <string name="pref_category_updater">Updates</string>
    <string name="pref_category_contributors">Acknowledgments</string>
    <string name="pref_autoconnect">Automatic authentication</string>
    <string name="pref_autoconnect_summary">Login automatically when connected to supported Wi-Fi networks</string>
    <string name="pref_wifi_reconnect">Reconnect to Wi-Fi</string>
    <string name="pref_wifi_reconnect_summary">
        Try to reconnect to Wi-Fi network automatically when Wi-Fi signal is lost or connection is reset. (Android &lt; 10)
    </string>
    <string name="pref_wifi_bind">Bind process to the network</string>
    <string name="pref_wifi_bind_summary">Prevents leaking traffic to mobile network or VPN. (Android ≥ 5)</string>
    <string name="pref_internet_check">Connection monitoring</string>
    <string name="pref_internet_check_summary">Check Internet connection every 10 seconds and restart connection on error.</string>
    <string name="pref_notify_fail">Connection failure</string>
    <string name="pref_notify_fail_summary">Notify on failure</string>
    <string name="pref_notify_alternative">Alternative icons</string>
    <string name="pref_notify_alternative_summary">
        Use white icons on Android older than 5.0 and colored icons on Android 5.0 and newer (not always supported).
    </string>
    <string name="pref_notify_success_lock">Locked notification</string>
    <string name="pref_notify_success_lock_summary">
        Lock successful connection notification (notification will remain while Wi-Fi is connected)
    </string>
    <string name="pref_notify_news">Developer news</string>
    <string name="pref_notify_news_summary">I will be able to inform you in case of problems with application.</string>
    <string name="pref_retry_delay">Delay between retries</string>
    <string name="pref_retry_delay_summary">Number of seconds between retries (default: 5)</string>
    <string name="pref_retry_count">Retry count</string>
    <string name="pref_retry_count_summary">Number of retries on error (default: 3)</string>
    <string name="pref_ip_wait">Waiting for IP address</string>
    <string name="pref_ip_wait_summary">
        Number of seconds to wait for IP address assignment.
        If 0 is set, application will wait until device disconnects from the network (default: 0).
    </string>
    <string name="pref_updater_enabled">Check automatically</string>
    <string name="pref_updater_enabled_summary">Check for updates on application start</string>
    <string name="pref_updater_check">Check for updates</string>
    <string name="pref_updater_check_summary">Check for new application version on developer website</string>
    <string name="pref_updater_branch">Update branch</string>
    <string name="pref_updater_branch_summary">
        Branches differ by functionality and update frequency. Tap here to see more or select a branch.
    </string>
    <string name="update_available">Update is available</string>
    <string name="update_not_available">No updates available</string>
    <string name="update_not_available_message">New versions will be displayed here when published.</string>
    <string name="developer">Developer</string>
    <string name="developer_info">Dmitry Karikh (mosmetro@thedrhax.pw)</string>
    <string name="developer_github_repo">GitHub organization</string>
    <string name="developer_github_repo_summary" translatable="false">github.com/mosmetro-android</string>
    <string name="developer_github_repo_link" translatable="false">https://github.com/mosmetro-android</string>
    <string name="developer_vkontakte">VK community</string>
    <string name="developer_vkontakte_summary" translatable="false">vk.com/wifi_v_metro</string>
    <string name="developer_vkontakte_link" translatable="false">https://vk.com/wifi_v_metro</string>
    <string name="developer_telegram_channel">Telegram channel</string>
    <string name="developer_telegram_channel_summary" translatable="false">t.me/wifi_v_metro</string>
    <string name="developer_telegram_channel_link" translatable="false">https://t.me/wifi_v_metro</string>
    <string name="developer_telegram">Telegram group</string>
    <string name="developer_telegram_group_summary" translatable="false">t.me/joinchat/0S7nOjfkV2E2OTAy</string>
    <string name="developer_telegram_link" translatable="false">https://t.me/joinchat/0S7nOjfkV2E2OTAy</string>
    <string name="manual_connection">Manual connection</string>
    <string name="manual_connection_summary">You can connect here if this application is ignoring Wi-Fi state</string>
    <string name="manual_connection_shortcut">Create shortcut</string>
    <string name="view_log">View log</string>
    <string name="view_log_summary">Press here to view logs of previous runs.</string>
    <string name="shortcut_background">Connect in the background</string>
    <string name="shortcut_force">Even if network name is unknown</string>
    <string name="auth_connecting" formatted="false">Connecting to %s</string>
    <string name="algorithm_name" formatted="false">Algorithm name: %s</string>
    <string name="auth_waiting">Waiting…</string>
    <string name="auth_checking_connection">Checking Internet connection</string>
    <string name="auth_already_connected">Already connected</string>
    <string name="auth_init">Initializing auth procedure</string>
    <string name="auth_check">Checking auth status</string>
    <string name="auth_finish">Finishing auth procedure</string>
    <string name="auth_unknown_redirect">Unknown redirect. Trying to detect algorithm…</string>
    <string name="auth_algorithm_switch">Switching to another algorithm: %s (this is not an error)</string>
    <string name="auth_redirect">Getting redirection</string>
    <string name="auth_auth_page">Getting login page</string>
    <string name="auth_auth_form">Sending login form</string>
    <string name="contirutor_revertron" translatable="false">Revertron</string>
    <string name="contributor_revertron_summary">Numerous algorithm recommendations</string>
    <string name="contributor_revertron_link" translatable="false">https://github.com/Revertron</string>
    <string name="contrinutor_Mikhail_Kuropatkin_summary">Helped collecting authentication dumps</string>
    <string name="contributor_Mikhail_Kuropatkin" translatable="false">Mikhail Kuropatkin</string>
    <string name="contributor_Mikhail_Kuropatkin_link" translatable="false">https://telegram.me/kuropatkin</string>
    <string name="contributor_Alexander_Krotov" translatable="false">Alexander Krotov</string>
    <string name="contributor_Alexander_Krotov_summary">First Pull-request, Gradle migration, English translation</string>
    <string name="contributor_Alexander_Krotov_link" translatable="false">https://github.com/ilabdsf</string>
    <string name="contributor_Igor_Dyatlov" translatable="false">Igor Dyatlov</string>
    <string name="contributor_Igor_Dyatlov_summary">Graphic design, logo</string>
    <string name="contributor_Igor_Dyatlov_link" translatable="false">https://github.com/igor-dyatlov</string>
    <string name="pref_category_wifi">Wi-Fi control</string>
    <string name="pref_category_internet">Internet checks</string>
    <string name="more_information">More information</string>
    <string name="more_information_summary">Links, communities, contibutors</string>
    <string name="stop">Stop</string>
    <string name="pref_notify_foreground">Foreground process</string>
    <string name="pref_notify_foreground_summary">Bind background process to notification to protect it from being killed. If you disable this option, background process will be killed even if you simply open and close the app window.</string>
    <string name="pref_timeout">Connection timeout</string>
    <string name="pref_timeout_summary">Number of seconds to wait for server answer. If 0 is set, application will wait until connection error is caught (default: 5).</string>
    <string name="pref_notify_priority">Notification priority</string>
    <string name="pref_notify_priority_summary">A value between -2 and 2 that affects the priority of all notifications. (default: 0)</string>
    <string name="pref_notify_success">Connected successfully</string>
    <string name="pref_notify_success_summary">Notify on successful connection</string>
    <string name="manual_connection_shortcut_summary">Start manual connection directly from launcher</string>
    <string name="pref_debug_logcat">System log</string>
    <string name="pref_debug_logcat_summary">Write log messages to system log to allow debugging in case of crash.</string>
    <string name="pref_debug_acra">Crash reports</string>
    <string name="pref_debug_acra_summary">Automatically send crash reports to application developer.</string>
    <string name="pref_debug">Debug options</string>
    <string name="pref_debug_summary">Automatic reports, LogCat, etc.</string>
    <string name="pref_debug_last_log">Send the last log</string>
    <string name="pref_debug_last_log_summary">Log will be sent along with Sentry reports in case of crash.</string>
    <string name="pref_debug_testing">Participation in testing</string>
    <string name="pref_debug_testing_summary">Send conditional automated reports. Conditions change in every update and are targeting new functions and fixes. Reports contain last log, app version and some information about system and device.</string>
    <string name="pref_notify_donate">Donation reminder</string>
    <string name="pref_notify_donate_summary">Show notification about every 50-th successful connection and ask for a donation</string>
    <string name="send">Send</string>
    <string name="feedback_description">Problem description (not required)</string>
    <string name="pref_debug_stats">Participation in statistics</string>
    <string name="pref_debug_stats_summary">App will collect anonymous metrics about connections. In addition to fully internal metrics (app version, algorithm, etc.) reports may include OS version and the name of the Wi-Fi network.</string>
</resources>