<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_autoconnect"
        android:title="@string/pref_autoconnect"
        android:summary="@string/pref_autoconnect_summary"
        android:defaultValue="true" />

    <Preference
        android:title="@string/manual_connection"
        android:summary="@string/manual_connection_summary">

        <intent android:action="pw.thedrhax.mosmetro.activities.DebugActivity" />
    </Preference>

    <Preference
        android:key="pref_shortcut"
        android:title="@string/manual_connection_shortcut"
        android:summary="@string/manual_connection_shortcut_summary">

        <intent android:action="pw.thedrhax.mosmetro.activities.ShortcutActivity" />
    </Preference>

    <PreferenceCategory
        android:key="pref_category_main"
        android:title="@string/pref_category_main">

        <Preference
            android:key="pref_conn"
            android:title="@string/pref_category_connection"
            android:summary="@string/pref_category_connection_summary" />

        <Preference
            android:key="pref_notify"
            android:title="@string/pref_category_notifications"
            android:summary="@string/pref_category_notifications_summary" />

        <Preference
            android:key="pref_debug"
            android:title="@string/pref_debug"
            android:summary="@string/pref_debug_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_updater">

        <CheckBoxPreference
            android:key="pref_updater_enabled"
            android:title="@string/pref_updater_enabled"
            android:summary="@string/pref_updater_enabled_summary"
            android:defaultValue="true" />

        <Preference
            android:key="pref_updater_check"
            android:title="@string/pref_updater_check"
            android:summary="@string/pref_updater_check_summary" />

        <Preference
            android:key="pref_updater_branch"
            android:title="@string/pref_updater_branch"
            android:summary="@string/pref_updater_branch_summary"
            android:defaultValue="@string/build_branch_name"
            android:enabled="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:key="app_name"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/app_name" />

        <Preference
            android:key="pref_about"
            android:title="@string/more_information"
            android:summary="@string/more_information_summary" />

    </PreferenceCategory>
</PreferenceScreen>