<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="acra.enable"
        android:title="@string/pref_debug_acra"
        android:summary="@string/pref_debug_acra_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_debug_last_log"
        android:title="@string/pref_debug_last_log"
        android:summary="@string/pref_debug_last_log_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_debug_testing"
        android:title="@string/pref_debug_testing"
        android:summary="@string/pref_debug_testing_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_debug_stats"
        android:title="@string/pref_debug_stats"
        android:summary="@string/pref_debug_stats_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_debug_logcat"
        android:title="@string/pref_debug_logcat"
        android:summary="@string/pref_debug_logcat_summary"
        android:defaultValue="false" />

</PreferenceScreen>